# DS_Jobs_Dashboard

./: .gitignore  README.md  app.py  main.py  models.py  neo4j_service.py  pyproject.toml  routes.py  sample_data.py
attached_assets/: ai_jobs_data_clean_1765219053903.csv
static/css/: style.css
static/js/: visualizations.js
templates/: analytics.html  base.html  index.html  job_detail.html  job_form.html  visualizations.html
